# rust-jira

./: Cargo.toml  README.md
src/: main.rs  persistence.rs  store.rs  ticket.rs
src/models/: comment.rs  ticket.rs  ticket_draft.rs  ticket_patch.rs  title.rs
